<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.martins.kelson.martins_kelson_2868764.ReversiView
        android:id="@+id/reversi_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:paddingTop="5sp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_turn"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/player_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:paddingLeft="10sp"
                android:id="@+id/tv_turntext"
                android:textSize="20sp"
                android:text="@string/turn_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/white_score"
                    android:textSize="20sp"
                    android:paddingLeft="10sp"
                    android:text="@string/score_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/black_score"
                    android:textSize="20sp"
                    android:paddingLeft="10sp"
                    android:text="@string/score_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <Button
            android:id="@+id/bt_reset"
            android:layout_alignParentBottom="true"
            android:text="@string/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
